--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,21 @@ en:
         message: "The form contains"
         name: "error"
     admin:
+      product:
+        form:
+          category: "Category"
+        new:
+          h1: "Create new product"
+        edit:
+          h1: "Edit product"
+        index:
+          all: "All products"
+          id: "Id"
+          name: "Name"
+          category: "Category"
+          price: "Price ($)"
+          quantity: "Quantity"
+          newproductbutton: "Create new product"
       category:
         new:
           h1: "Create new category"
@@ -57,4 +72,4 @@ en:
           deleteconfirm: "Are you sure?"
           newcategorybutton: "Create new category"
         form:
-          classify: "Classify
+          classify: "Classify"
