--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,10 @@ en:
     model:
       category: "Category"
   views:
+    products:
+      index:
+        h1: "All products"
+        ratescore: "Rate score: "
     shared:
       error:
         message: "The form contains"
